namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintrack
  labels:
    app.kubernetes.io/part-of: fintrack-platform
